--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -38,7 +38,7 @@
 
 /* Fonts */
 .md-typeset {
-    font-size: 1.6rem;
+    /*font-size: 1.0rem;*/
     line-height: 1.4;
     -webkit-print-color-adjust: exact;
 }
